# CUDAKernelEnergyPredictor

./: .gitignore  README.md  batch_profile.py  batch_profile.sh  gpu_sampler.py  lock_gpu_clocks.sh  onnx_conv.py  onnxruntime_profile__2022-12-09_14-05-23.json  predictor.ipynb  test_predictor.ipynb  test_stability.py
onnx_model_runner/: .gitignore  CMakeLists.txt  __init__.py  rebuild.sh
onnx_model_runner/cuda_energy_profiler/no_thread_pool/: cuda_energy_profiler.cc
onnx_model_runner/cuda_energy_profiler/with_ctpl_thread_pool/: ctpl_stl.h  cuda_energy_profiler.cc  cuda_energy_profiler.h
onnx_model_runner/src/: main.cpp  run_onnx_model.cpp  run_onnx_model.h
predictor/: __init__.py  predictor.py
predictor/models/: P100_energy.model  P100_latency.model  V100_energy.model  V100_energy.onnx.model  V100_latency.model  V100_latency.onnx.model
search_space/: regnet_convs.csv  regnet_convs_expand.csv  regnet_convs_unique.csv  remove_redundant.ipynb
vae/: generate_data.ipynb  train_vae.py
